# pear2pear

./: README
p2p/: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  aggregator.toml  cli.toml  docker-compose.yml  foundry.toml  package-lock.json  package.json  remappings.txt  rustfmt.toml  wavs.toml
p2p/.claude/: Dockerfile.claude
p2p/.github/workflows/: ci.yml
p2p/components/p2p-boolean-oracle/: Cargo.toml  README.md
p2p/components/p2p-boolean-oracle/prediction-market-oracle/: Cargo.toml
p2p/components/p2p-boolean-oracle/src/: lib.rs  trigger.rs
p2p/frontend/: components.json  next.config.js  package-lock.json  package.json  tailwind.config.js
p2p/frontend/components/: app-header.tsx  footer-warning.tsx  main-menu.tsx  motion-wrapper.tsx  network-selector.tsx  seller-selector.tsx  step-indicator.tsx  theme-provider.tsx  token-selector.tsx
p2p/frontend/components/charts/: MarketProbabilityChart.tsx
p2p/frontend/components/layout/: Layout.tsx  Navbar.tsx
p2p/frontend/components/markets/: BuyPredictionForm.tsx  CreateMarketForm.tsx  CreateOrderForm.tsx  FundOrderForm.tsx  MarketCard.tsx  MarketDetails.tsx  MarketGrid.tsx  OrderCard.tsx  OrderGrid.tsx  RedeemPositionForm.tsx  TriggerOracleForm.tsx
p2p/frontend/components/pearscrow/: PearScrowPaymentForm.tsx
p2p/frontend/components/tokens/: ApproveTokensForm.tsx  DepositTokensForm.tsx
p2p/frontend/components/ui/: Input.tsx  tooltip.tsx
p2p/frontend/pages/: _app.tsx  admin.tsx  ajustes.tsx  balance.tsx  comprar.tsx  create.tsx  historial.tsx  history.tsx  index.tsx  inicio.tsx  liquidez.tsx  orden-completada.tsx  pearscrow-demo.tsx  portfolio.tsx  simple-pearscrow-demo.tsx  subir-cep.tsx  vender.tsx
p2p/frontend/pages/markets/: [id].tsx
p2p/frontend/scripts/: load-env.js
p2p/frontend/styles/: globals.css
p2p/frontend/types/: index.ts
p2p/frontend/utils/: constants.ts  contracts.ts  env.ts  helpers.ts  mockData.ts  pearscrow.ts  rainbowkit-config.ts  simplePearscrow.ts  walletClientToSigner.ts
p2p/script/: BuyYes.s.sol  CreateOrder.s.sol  Deploy.s.sol  Redeem.s.sol  SetBooleanResult.s.sol  Trigger.s.sol
p2p/src/contracts/: ERC20Mintable.sol  P2PMarket.sol  P2POracleController.sol
p2p/src/interfaces/: ITypes.sol
(+15 files in other folders)
