[workspace]
members = ["components/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.3.0"
license = "MIT"
authors = ["Lay3r Labs Team"]
repository = "https://github.com/Lay3rLabs/wavs"
rust-version = "1.80.0"

[workspace.dependencies]
# WASI
wit-bindgen-rt = { version = "0.39.0", features = ["bitflags"] }
wit-bindgen = "0.39.0"
wstd = "0.5.1"
wasi = "0.14.1"
wavs-wasi-chain = "0.3.0"

# Other
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
anyhow = "1.0.95"

## Alloy
alloy-sol-macro = { version = "0.8.13", features = ["json"] }
alloy-sol-types = "0.8.13"
alloy-primitives = "0.8.13"
