[package]
name = "p2p-boolean-oracle"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wavs-wasi-chain = { workspace = true }
wstd = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }
alloy-sol-macro = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }

[dev-dependencies]
mockall = "0.11"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:p2p-boolean-oracle"
target = "wavs:worker/layer-trigger-world@0.3.0"
